# serial_singleton

./: .buildinfo  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference_index.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  reference_index.doctree
.github/workflows/: CI.yaml  documentation.yaml  linting.yaml
_sources/: index.rst.txt  reference_index.rst.txt
docs/source/: conf.py
src/: serial_singleton.py
src/serial_singleton/: serial_singleton.py
tests/: test_serial_singleton.py
